Set cookie properly, cmon..

--- a/html/index.html
+++ b/html/index.html
@@ -56,6 +56,7 @@
       SITEURL = '{{cloud_url}}'
       PEDALBOARDS_URL = '{{pedalboards_url}}'
       LV2_PLUGIN_DIR  = '{{lv2_plugin_dir}}'
+      VERSION         = '{{version}}'
       var BUFFERSIZE  = {{bufferSize}}
       var SAMPLERATE  = {{sampleRate}}
       var NOTIFICATIONS_ENABLED = true
