Optimize first page load by delaying plugin-list/search

--- a/html/pedalboard.html
+++ b/html/pedalboard.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="js/lib/jquery.svg.js"></script>
     <script type="text/javascript" src="js/lib/sprintf-0.6.js"></script>
     <script type="text/javascript" src="js/lib/jquery.mousewheel.min.js"></script>
+    <script type="text/javascript" src="js/lib/arrive.min.js"></script>
 
     <script type="text/javascript">
 
