--- a/html/index.html
+++ b/html/index.html
@@ -497,7 +497,7 @@ $('document').ready(function() {
         <div id="mod-buffersize" class="icon mod-hidden">{{bufferSize}} frames</div>
         <div id="mod-bypassRight" class="icon mod-bypass">Bypass R</div>
         <div id="mod-bypassLeft" class="icon mod-bypass">Bypass L</div>
-        <div id="mod-show-midi-port" class="icon">Show MIDI Port</div>
+        <div id="mod-show-midi-port" class="icon">MIDI Ports</div>
     </div>
     <!-- END MAIN MENU-->
 
