--- a/html/index.html
+++ b/html/index.html
@@ -629,7 +629,10 @@ $('document').ready(function() {
                     <input id="searchPedalboard" class="form-control" length="20" placeholder="Filter by keyword(s)" type="search"/>
                 </div>
                 <a style="display:inline-block;float:right;color:#AAA;font-size:1.1em;margin-right:20px;"
-                   href="http://pedalboards.moddevices.com/" target="_blank">View more pedalboards online</a>
+                   href="http://pedalboards.moddevices.com/" target="_blank">
+                    <img style="width: 1.2em; height: 1.2em; opacity: 0.6; vertical-align: middle;" src="img/icons/25/launch.png">
+                    <span style="vertical-align: middle;">Browse pedalboards</span>
+                </a>
             </header>
             <div class="pedalboards clearfix js-pedalboards"></div>
         </div>
