- Added link to pedalboards site

--- a/html/index.html
+++ b/html/index.html
@@ -159,8 +159,9 @@ $('document').ready(function() {
             INFO = info
         },
         dataType: 'json'
-    })
+    });
 
+    desktop.resetPedalboardStats();
 })
 
 </script>
