--- a/html/index.html
+++ b/html/index.html
@@ -632,7 +632,7 @@ $('document').ready(function() {
                 <a style="display:inline-block;float:right;color:#AAA;font-size:1.1em;margin-right:30px;"
                    href="http://pedalboards.moddevices.com/" target="_blank">
                     <img style="width: 1.2em; height: 1.2em; opacity: 0.6; vertical-align: middle;" src="img/icons/25/search.png">
-                    <span style="vertical-align: middle;">Browse Pedalboards</span>
+                    <span style="vertical-align: middle;">Browse Online Pedalboards</span>
                 </a>
             </header>
             <div class="pedalboards clearfix js-pedalboards"></div>
