Add 'Favorites' plugin category

--- a/html/index.html
+++ b/html/index.html
@@ -64,6 +64,7 @@
       var DEFAULT_ICON_TEMPLATE = '{{default_icon_template}}'
       var DEFAULT_SETTINGS_TEMPLATE = '{{default_settings_template}}'
       var DEFAULT_PEDALBOARD = '{{default_pedalboard}}'
+      var FAVORITES = {{favorites}}
       var DEBUG = true;
       if (!DEBUG) {
           console = console || {}
@@ -517,6 +518,7 @@ $('document').ready(function() {
             <li id="effect-tab-Spatial">Spatial</li>
             <li id="effect-tab-Spectral">Spectral</li>
             <li id="effect-tab-Utility">Utility</li>
+            <li id="effect-tab-Favorites">Favorites</li>
         </ul>
         <span class="js-settings-trigger settings selected"></span>
         <span class="js-effects-fold fold"></span>
@@ -549,6 +551,7 @@ $('document').ready(function() {
                     <div id="effect-content-Spatial" class="plugins-wrapper"></div>
                     <div id="effect-content-Spectral" class="plugins-wrapper"></div>
                     <div id="effect-content-Utility" class="plugins-wrapper"></div>
+                    <div id="effect-content-Favorites" class="plugins-wrapper"></div>
                 </div>
             </div>
             <div class="nav nav-right"></div>
