--- a/html/index.html
+++ b/html/index.html
@@ -497,8 +497,8 @@ $('document').ready(function() {
         </div>
         <div id="mod-xruns" class="icon mod-hidden">0 Xruns</div>
         <div id="mod-buffersize" class="icon mod-hidden">{{bufferSize}} frames</div>
-        <div id="mod-bypassRight" class="icon mod-bypass">Bypass R</div>
-        <div id="mod-bypassLeft" class="icon mod-bypass">Bypass L</div>
+        <div id="mod-bypassRight" class="icon mod-bypass">Bypass 2</div>
+        <div id="mod-bypassLeft" class="icon mod-bypass">Bypass 1</div>
         <div id="mod-show-midi-port" class="icon">MIDI Ports</div>
     </div>
     <!-- END MAIN MENU-->
