Add html for pedal save-as widget

--- a/html/index.html
+++ b/html/index.html
@@ -311,6 +311,24 @@ $('document').ready(function() {
             </div>
             <!-- END SAVE PRESET WINDOW -->
 
+            <!-- SAVE PEDAL-PRESET WINDOW -->
+            <div id="save-pedal-preset" class="save-popup mod-hidden" style="z-index:1001;">
+                <div class="mod-box">
+                    <h1>Saving Pedalboard Preset</h1>
+                    <form class="bottom">
+                        <div class="controls clearfix">
+                            <label>Name</label>
+                            <input type="text" class="form-control"/>
+                        </div>
+                        <div class="controls actions">
+                            <button class="js-cancel-saving btn btn-danger">Cancel</button>
+                            <button class="js-save btn btn-success">Save</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!-- END SAVE PEDAL-PRESET WINDOW -->
+
         <!-- PEDALBOARD SHARE WINDOW -->
         <div id="share-window" class="save-popup mod-hidden">
             <div class="box">
