Add missing alt attributes to some img elements

--- a/html/index.html
+++ b/html/index.html
@@ -401,10 +401,10 @@ $('document').ready(function() {
                                 Copy url to clipboard
                             </a>
                             <a class="btn btn-danger btn-large btn-block fb" target="_blank" href="#" id="share-window-fb">
-                                Share to Facebook <img src="/img/icons/36/share-fb.png" />
+                                Share to Facebook <img src="/img/icons/36/share-fb.png" alt=""/>
                             </a>
                             <a class="btn btn-inverse btn-large btn-block tw" target="_blank" href="#" id="share-window-tw">
-                                Share to Twitter <img src="/img/icons/36/share-tw.png" />
+                                Share to Twitter <img src="/img/icons/36/share-tw.png" alt=""/>
                             </a>
                             <a class="btn btn-inverse btn-large btn-block btn-warning" target="_blank" href="{{pedalboards_url}}" id="share-window-feed">
                                 Check out more pedalboards
@@ -648,7 +648,7 @@ $('document').ready(function() {
                 </div>
                 <a style="display:inline-block;float:right;color:#AAA;font-size:1.1em;margin-right:30px;"
                    href="http://pedalboards.moddevices.com/" target="_blank">
-                    <img style="width: 1.2em; height: 1.2em; opacity: 0.6; vertical-align: middle;" src="img/icons/25/language.png">
+                    <img style="width: 1.2em; height: 1.2em; opacity: 0.6; vertical-align: middle;" src="img/icons/25/language.png" alt=""/>
                     <span style="vertical-align: middle;">Browse Online Pedalboards</span>
                 </a>
             </header>
