Fix input length parameter, should be maxlength See https://developer.mozilla.org/en/docs/Web/HTML/Element/input

--- a/html/index.html
+++ b/html/index.html
@@ -644,7 +644,7 @@ $('document').ready(function() {
                     Pedalboards Library
                 </h1>
                 <div class="form-group">
-                    <input id="searchPedalboard" class="form-control" length="20" placeholder="Filter by keyword(s)" type="search"/>
+                    <input id="searchPedalboard" class="form-control" maxlength="20" placeholder="Filter by keyword(s)" type="search"/>
                 </div>
                 <a style="display:inline-block;float:right;color:#AAA;font-size:1.1em;margin-right:30px;"
                    href="http://pedalboards.moddevices.com/" target="_blank">
@@ -702,7 +702,7 @@ $('document').ready(function() {
                     <div class="clearfix">
                         <div class="form-group">
                             <label for="searchBank" >Select pedalboards</label>
-                            <input id="searchBank" class="form-control" length="20" placeholder="Filter by keyword(s)" type="search"/>
+                            <input id="searchBank" class="form-control" maxlength="20" placeholder="Filter by keyword(s)" type="search"/>
                         </div>
                     </div>
                 </div>
