--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+
+<!-- HEAD -->
 <head>
 <meta charset="UTF-8">
 <title>MOD</title>
@@ -21,21 +23,6 @@
 <meta name="msapplication-TileColor" content="#111111">
 <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#111111">
-
-<link rel="stylesheet" type="text/css" href="css/fontello/css/fontello.css?v={{version}}"/>
-<link rel="stylesheet" type="text/css" href="css/main.css?v={{version}}"/>
-<link rel="stylesheet" type="text/css" href="css/dashboard.css?v={{version}}"/>
-<link rel="stylesheet" type="text/css" href="css/fonts.css?v={{version}}"/>
-<link rel="stylesheet" type="text/css" href="img/icons/icons.css?v={{version}}"/>
-<!-- PEDALS -->
-<link rel="stylesheet" type="text/css" href="css/pedals.css?v={{version}}"/>
-<!-- DEFAULT -->
-<link rel="stylesheet" type="text/css" href="resources/pedals/default.css?v={{version}}"/>
-
-<script type="text/javascript">
-    // for mod-app control
-    var desktop = null
-</script>
 
 <script type="text/javascript" src="js/lib/jquery-1.9.1.min.js?v={{version}}"></script>
 <script type="text/javascript" src="js/lib/jquery-ui-1.10.1.custom.min.js?v={{version}}"></script>
@@ -76,6 +63,9 @@
         "python": {},
         "uname": {}
     }
+
+    // for mod-app control
+    var desktop = null
 
 $('document').ready(function() {
     desktop = new Desktop({
@@ -191,6 +181,14 @@ $('document').ready(function() {
 <script type="text/javascript" src="js/host.js?v={{version}}"></script>
 <script type="text/javascript" src="js/nprogress.js?v={{version}}"></script>
 
+<link rel="stylesheet" type="text/css" href="css/fontello/css/fontello.css?v={{version}}"/>
+<link rel="stylesheet" type="text/css" href="css/main.css?v={{version}}"/>
+<link rel="stylesheet" type="text/css" href="css/dashboard.css?v={{version}}"/>
+<link rel="stylesheet" type="text/css" href="css/fonts.css?v={{version}}"/>
+<link rel="stylesheet" type="text/css" href="img/icons/icons.css?v={{version}}"/>
+<link rel="stylesheet" type="text/css" href="css/pedals.css?v={{version}}"/>
+<link rel="stylesheet" type="text/css" href="resources/pedals/default.css?v={{version}}"/>
+
 <style type="text/css">
     /* STYLE FOR LOADING ANIMATION */
     body.initialized #loading { display: none; }
@@ -199,8 +197,11 @@ $('document').ready(function() {
     .loadingcircle { animation: loadingcircle 0.5s linear infinite; }
     @keyframes loadingcircle { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); }}
 </style>
-</head>
 
+</head>
+<!-- END HEAD -->
+
+<!-- BODY -->
 <body class="mod-dark">
   <svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" id="loading" class="loadinganim" version="1.1">
    <g transform="translate(50, 50)"><g class="loadingcircle"><g transform="translate(-50,-50)">
@@ -757,4 +758,6 @@ $('document').ready(function() {
 <!-- END MOD UPDATE/UPGRADE BOX -->
 
 </body>
+<!-- END BODY -->
+
 </html>
