--- a/html/index.html
+++ b/html/index.html
@@ -83,7 +83,8 @@ $('document').ready(function() {
         pedalboardPresetsEnabler: $('#pedalboard-info #js-preset-enabler'),
         presetSaveButton: $('#pedalboard-info .js-preset-save'),
         presetSaveAsButton: $('#pedalboard-info .js-preset-save-as'),
-        presetSaveManage: $('#pedalboard-info .js-preset-manage'),
+        presetManageButton: $('#pedalboard-info .js-preset-manage'),
+        presetDisableButton: $('#pedalboard-info .js-preset-disable'),
         effectBox: $('#plugins-library'),
         pedalboardTrigger: $('#main-menu #mod-plugins'),
         cloudPluginBox: $('#cloud-plugins-library'),
@@ -237,8 +238,8 @@ $('document').ready(function() {
 
 <!-- PRELOAD -->
 <div class="mod-hidden">
-    <img src="/img/icons/blocked.svg" alt=""/>
-    <img src="/img/icons/25/reload.png" alt=""/>
+    <img src="img/icons/blocked.svg" alt=""/>
+    <img src="img/icons/25/reload.png" alt=""/>
 </div>
 <!-- END PRELOAD -->
 
@@ -406,10 +407,10 @@ $('document').ready(function() {
                                 Copy url to clipboard
                             </a>
                             <a class="btn btn-danger btn-large btn-block fb" target="_blank" href="#" id="share-window-fb">
-                                Share to Facebook <img src="/img/icons/36/share-fb.png" alt=""/>
+                                Share to Facebook <img src="img/icons/36/share-fb.png" alt=""/>
                             </a>
                             <a class="btn btn-inverse btn-large btn-block tw" target="_blank" href="#" id="share-window-tw">
-                                Share to Twitter <img src="/img/icons/36/share-tw.png" alt=""/>
+                                Share to Twitter <img src="img/icons/36/share-tw.png" alt=""/>
                             </a>
                             <a class="btn btn-inverse btn-large btn-block btn-warning" target="_blank" href="{{pedalboards_url}}" id="share-window-feed">
                                 Check out more pedalboards
@@ -440,10 +441,13 @@ $('document').ready(function() {
                     <ul class="drop-menu clearfix js-pedalboard-presets-menu" style="cursor:pointer;">
                         <li class="js-preset-save">Save</li>
                         <li class="js-preset-save-as">Save as</li>
+                        <!--
                         <li class="sub-menu-trigger">Load <span class="pull-right">&rsaquo;</span>
                             <ul class="menu-preset-list sub-menu"></ul>
                         </li>
+                        -->
                         <li class="js-preset-manage">Manage / Assign</li>
+                        <li class="js-preset-disable">Disable</li>
                     </ul>
                     <button class="js-reset">New Pedalboard</button>
                     <button class="js-save">Save</button>
