Basic working implementation of pedal presets, without data

--- a/html/index.html
+++ b/html/index.html
@@ -456,7 +456,7 @@ $('document').ready(function() {
                 <h1 class="pull-left">Manage presets</h1><span class="js-cancel close">&times;</span>
                 <form class="bottom">
                     <div class="controls clearfix">
-                        <select class="preset-list" id="pedal-presets-list"></select>
+                        <select class="preset-list" size="9" id="pedal-presets-list"></select>
                     </div>
                     <div class="controls actions">
                         <button class="js-rename btn btn-default">Rename</button>
