Hide share button if not using a MOD

--- a/html/index.html
+++ b/html/index.html
@@ -156,6 +156,7 @@ $('document').ready(function() {
         $('#mod-bypassRight').hide()
         $('#mod-cloud-plugins').hide()
         $('#mod-update').hide()
+        $('#pedalboard-info').find('.js-share').hide()
 
         // show other stuff to make it less empty
         $('#mod-xruns').show()
