Tweak some pedal preset related messages and text

--- a/html/index.html
+++ b/html/index.html
@@ -432,7 +432,7 @@ $('document').ready(function() {
                             <ul class="menu-preset-list sub-menu"></ul>
                         </li>
                         -->
-                        <li class="js-preset-manage">Manage / Assign</li>
+                        <li class="js-preset-manage">Load / Manage</li>
                         <li class="js-preset-disable">Disable</li>
                     </ul>
                     <button class="js-reset">New Pedalboard</button>
@@ -475,7 +475,7 @@ $('document').ready(function() {
         <!-- PEDALBOARD PRESETS -->
         <div id="pedal-presets-window" class="save-popup mod-hidden">
             <div class="mod-box" style="width: 400px">
-                <h1 class="pull-left">Manage presets</h1><span class="js-cancel close">&times;</span>
+                <h1 class="pull-left">Load / Manage presets</h1><span class="js-cancel close">&times;</span>
                 <form class="bottom">
                     <div class="controls clearfix">
                         <select class="preset-list" size="9" id="pedal-presets-list" style="background-color:inherit;"></select>
