--- a/html/index.html
+++ b/html/index.html
@@ -611,7 +611,7 @@ $('document').ready(function() {
                     <li id="cloud-plugin-tab-Dynamics">Dynamics</li>
                     <li id="cloud-plugin-tab-Filter">Filter</li>
                     <li id="cloud-plugin-tab-Generator">Generator</li>
-                    <li id="cloud-plugin-tab-MIDI-Filter">MIDI</li>
+                    <li id="cloud-plugin-tab-MIDI-Filter">MIDI-Filter</li>
                     <li id="cloud-plugin-tab-Modulator">Modulator</li>
                     <li id="cloud-plugin-tab-Reverb">Reverb</li>
                     <li id="cloud-plugin-tab-Simulator">Simulator</li>
