Rename 'MIDI Filter' to 'MIDI Utility'

--- a/html/index.html
+++ b/html/index.html
@@ -535,7 +535,7 @@ $('document').ready(function() {
             <li id="effect-tab-Dynamics">Dynamics</li>
             <li id="effect-tab-Filter">Filter</li>
             <li id="effect-tab-Generator">Generator</li>
-            <li id="effect-tab-MIDI-Filter">MIDI-Filter</li>
+            <li id="effect-tab-MIDI">MIDI Utility</li>
             <li id="effect-tab-Modulator">Modulator</li>
             <li id="effect-tab-Reverb">Reverb</li>
             <li id="effect-tab-Simulator">Simulator</li>
@@ -569,7 +569,7 @@ $('document').ready(function() {
                     <div id="effect-content-Dynamics" class="plugins-wrapper"></div>
                     <div id="effect-content-Filter" class="plugins-wrapper"></div>
                     <div id="effect-content-Generator" class="plugins-wrapper"></div>
-                    <div id="effect-content-MIDI-Filter" class="plugins-wrapper"></div>
+                    <div id="effect-content-MIDI" class="plugins-wrapper"></div>
                     <div id="effect-content-Modulator" class="plugins-wrapper"></div>
                     <div id="effect-content-Reverb" class="plugins-wrapper"></div>
                     <div id="effect-content-Simulator" class="plugins-wrapper"></div>
@@ -611,7 +611,7 @@ $('document').ready(function() {
                     <li id="cloud-plugin-tab-Dynamics">Dynamics</li>
                     <li id="cloud-plugin-tab-Filter">Filter</li>
                     <li id="cloud-plugin-tab-Generator">Generator</li>
-                    <li id="cloud-plugin-tab-MIDI-Filter">MIDI-Filter</li>
+                    <li id="cloud-plugin-tab-MIDI">MIDI Utility</li>
                     <li id="cloud-plugin-tab-Modulator">Modulator</li>
                     <li id="cloud-plugin-tab-Reverb">Reverb</li>
                     <li id="cloud-plugin-tab-Simulator">Simulator</li>
@@ -632,7 +632,7 @@ $('document').ready(function() {
                     <div id="cloud-plugin-content-Dynamics" class="plugins-wrapper"></div>
                     <div id="cloud-plugin-content-Filter" class="plugins-wrapper"></div>
                     <div id="cloud-plugin-content-Generator" class="plugins-wrapper"></div>
-                    <div id="cloud-plugin-content-MIDI-Filter" class="plugins-wrapper"></div>
+                    <div id="cloud-plugin-content-MIDI" class="plugins-wrapper"></div>
                     <div id="cloud-plugin-content-Modulator" class="plugins-wrapper"></div>
                     <div id="cloud-plugin-content-Reverb" class="plugins-wrapper"></div>
                     <div id="cloud-plugin-content-Simulator" class="plugins-wrapper"></div>
