Add cache:false to the rest of ajax requests

--- a/html/index.html
+++ b/html/index.html
@@ -193,6 +193,7 @@ $('document').ready(function() {
         success: function (info) {
             INFO = info
         },
+        cache: false,
         dataType: 'json'
     });
     */
