Fix pedalboard names saved with encoded names

--- a/html/index.html
+++ b/html/index.html
@@ -332,13 +332,13 @@ $('document').ready(function() {
                         <div class="col-sm-6 unpadded-l">
                             <label for="pedalboard-share-name">
                                 AUTHOR NAME <br/>
-                                <input type="text" class="form-control" id="pedalboard-share-name" value="{{user_name}}"/>
+                                <input type="text" class="form-control" id="pedalboard-share-name" value='{{user_name}}'/>
                             </label>
                         </div>
                         <div class="col-sm-6 unpadded">
                             <label for="pedalboard-share-email">
                                 E-MAIL <br/>
-                                <input type="text" class="form-control" id="pedalboard-share-email" value="{{user_email}}"/>
+                                <input type="text" class="form-control" id="pedalboard-share-email" value='{{user_email}}'/>
                             </label>
                         </div>
                         <label for="pedalboard-share-title">
