--- a/html/index.html
+++ b/html/index.html
@@ -57,11 +57,12 @@
     {% autoescape None %}
     var TEMPLATES = {}
     SITEURL = '{{cloud_url}}'
-    PEDALBOARDS_URL = '{{pedalboards_url}}'
-    LV2_PLUGIN_DIR  = '{{lv2_plugin_dir}}'
-    VERSION         = '{{version}}'
-    var BUFFERSIZE  = {{bufferSize}}
-    var SAMPLERATE  = {{sampleRate}}
+    PEDALBOARDS_URL  = '{{pedalboards_url}}'
+    CONTROLCHAIN_URL = '{{controlchain_url}}'
+    LV2_PLUGIN_DIR   = '{{lv2_plugin_dir}}'
+    VERSION          = '{{version}}'
+    var BUFFERSIZE   = {{bufferSize}}
+    var SAMPLERATE   = {{sampleRate}}
     var NOTIFICATIONS_ENABLED = true
     var HARDWARE_PROFILE = JSON.parse(atob('{{hardware_profile}}'))
     var DEFAULT_ICON_TEMPLATE = '{{default_icon_template}}'
