--- a/html/index.html
+++ b/html/index.html
@@ -328,8 +328,9 @@ $('document').ready(function() {
         <!-- PEDALBOARD SHARE WINDOW -->
         <div id="share-window" class="save-popup mod-hidden">
             <div class="box">
-                <h1>SHARE</h1>
+                <h1 class="pull-left">SHARE</h1><span class="js-cancel close">&times;</span>
                 <form>
+                    <div class="clearfix"></div>
                     <div class="form-group" id="share-window-form">
                         <div class="col-sm-6 unpadded-l">
                             <label for="pedalboard-share-name">
