Add close button to a few more dialogs

--- a/html/index.html
+++ b/html/index.html
@@ -292,9 +292,10 @@ $('document').ready(function() {
         <!-- SAVE PEDALBOARD WINDOW -->
         <div id="save-pedalboard" class="save-popup mod-hidden">
             <div class="mod-box">
-                <h1>Saving Pedalboard</h1>
+                <h1 class="pull-left">Saving Pedalboard</h1><span class="js-cancel-saving close">&times;</span>
                 <form class="bottom">
-                    <div class="controls clearfix">
+                    <div class="clearfix"></div>
+                    <div class="controls">
                         <label>Name</label>
                         <input type="text" class="form-control"/>
                     </div>
@@ -310,9 +311,10 @@ $('document').ready(function() {
         <!-- SAVE PRESET WINDOW -->
         <div id="save-preset" class="save-popup mod-hidden" style="z-index:1001;">
             <div class="mod-box">
-                <h1>Saving Preset</h1>
+                <h1 class="pull-left">Saving Preset</h1><span class="js-cancel-saving close">&times;</span>
                 <form class="bottom">
-                    <div class="controls clearfix">
+                    <div class="clearfix"></div>
+                    <div class="controls">
                         <label>Name</label>
                         <input type="text" class="form-control"/>
                     </div>
