Start work to show connected CC device list

--- a/html/index.html
+++ b/html/index.html
@@ -121,6 +121,7 @@ $('document').ready(function() {
         shareButton: $('#pedalboard-info .js-share'),
         shareWindow: $('#share-window'),
         presetSaveBox: $('#save-preset'),
+        devicesIcon: $('#mod-devices'),
         statusIcon: $('#mod-status'),
         upgradeIcon: $('#mod-update'),
         upgradeWindow: $('#mod-upgrade'),
@@ -541,6 +542,7 @@ $('document').ready(function() {
         <div id="banks-saving">Auto saving banks...</div>
         <div id="mod-update" class="status icon"></div>
         <div id="mod-status" class="status icon mod-hidden"></div>
+        <div id="mod-devices" class="status icon"></div>
         <div id="mod-ram" class="icon">
             <div class="progress" id="ram-bar" style="width: 100%;">
                 <div class="bar"></div> <!-- not sure if this is needed -->
