Move some control chain code out of desktop.js

--- a/html/index.html
+++ b/html/index.html
@@ -226,7 +226,7 @@ $('document').ready(function() {
 <script type="text/javascript" src="js/networkstatus.js?v={{version}}"></script>
 <script type="text/javascript" src="js/upgrade.js?v={{version}}"></script>
 <script type="text/javascript" src="js/host.js?v={{version}}"></script>
-<script type="text/javascript" src="js/cc-update.js?v={{version}}"></script>
+<script type="text/javascript" src="js/cc-manager.js?v={{version}}"></script>
 <script type="text/javascript" src="js/nprogress.js?v={{version}}"></script>
 
 </head>
