--- a/html/index.html
+++ b/html/index.html
@@ -122,6 +122,7 @@ $('document').ready(function() {
         shareWindow: $('#share-window'),
         presetSaveBox: $('#save-preset'),
         devicesIcon: $('#mod-devices'),
+        devicesWindow: $('#mod-devices-window'),
         statusIcon: $('#mod-status'),
         upgradeIcon: $('#mod-update'),
         upgradeWindow: $('#mod-upgrade'),
@@ -516,9 +517,7 @@ $('document').ready(function() {
                         <ul>
                             <li>Disconnect the device from the control-chain/ethernet port</li>
                             <li>Hold down the first footswitch on the control-chain device</li>
-                            <li>While the first footswitch is down, connect the device to the MOD via USB<br/>
-                                (You can stop holding down the first footswitch after connecting)
-                            </li>
+                            <li>While the first footswitch is down, connect the device to the MOD via USB</li>
                             <li>Wait for the "update completed" message</li>
                         </ul>
                         <p>
@@ -767,7 +766,7 @@ $('document').ready(function() {
     <!-- MOD UPDATE/UPGRADE TOOLTIP -->
     <div class="tooltip mod-hidden" style="right:102px;">
         <div class="arrow"></div>
-        <div class="text">New updates are available. Click to upgrade.</div>
+        <div class="text">New updates are available. Click to know more.</div>
     </div>
     <!-- END MOD UPDATE/UPGRADE TOOLTIP -->
 
@@ -796,6 +795,17 @@ $('document').ready(function() {
         </div>
     </div>
     <!-- END MOD UPDATE/UPGRADE BOX -->
+
+    <!-- CONTROL CHAIN DEVICES BOX -->
+    <div id="mod-devices-window" class="mod-hidden">
+        <div class="box">
+            <div class="mod-devices-window-list">
+                <header><h4>Control Chain Devices</h4></header>
+                <ul></ul>
+            </div>
+        </div>
+    </div>
+    <!-- END CONTROL CHAIN DEVICES BOX -->
 
 <!-- END WRAPPER -->
 </div>
