Specify dimensions for reload.png

--- a/html/index.html
+++ b/html/index.html
@@ -270,7 +270,7 @@ $('document').ready(function() {
 <!-- PRELOAD -->
 <div class="mod-hidden">
     <img src="img/icons/blocked.svg" alt=""/>
-    <img src="img/icons/25/reload.png" alt=""/>
+    <img src="img/icons/25/reload.png" width="25px" height="25px" alt=""/>
 </div>
 <!-- END PRELOAD -->
 
