--- a/html/index.html
+++ b/html/index.html
@@ -517,8 +517,10 @@ $('document').ready(function() {
                         <ul>
                             <li>Disconnect the device from the control-chain/ethernet port</li>
                             <li>Hold down the first footswitch on the control-chain device</li>
-                            <li>While the first footswitch is down, connect the device to the MOD via USB</li>
+                            <li>While the first footswitch is down, connect the device to the MOD Duo via USB</li>
                             <li>Wait for the "update completed" message</li>
+                            <li>Disconnect the device from the USB port</li>
+                            <li>Connect it to the control-chain/ethernet port once again</li>
                         </ul>
                         <p>
                             Note: The update should only take a few seconds.
@@ -766,7 +768,7 @@ $('document').ready(function() {
     <!-- MOD UPDATE/UPGRADE TOOLTIP -->
     <div class="tooltip mod-hidden" style="right:102px;">
         <div class="arrow"></div>
-        <div class="text">New updates are available. Click to know more.</div>
+        <div class="text">New updates are available. Click to learn more.</div>
     </div>
     <!-- END MOD UPDATE/UPGRADE TOOLTIP -->
 
